--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/GreenRexPeas.png",
               "src/assets"
             ],
             "styles": [
@@ -91,7 +91,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/GreenRexPeas.png",
               "src/assets"
             ],
             "styles": [
