--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,9 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
+
 # Visual Studio Code
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
