--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /bazel-out
 
 # Node
-/node_modules
+REx/node_modules
 npm-debug.log
 yarn-error.log
 
@@ -30,7 +30,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-/.angular/cache
+REx/.angular/cache
 .sass-cache/
 /connect.lock
 /coverage
