--- a/.github/workflows/check_regex_examples.yml
+++ b/.github/workflows/check_regex_examples.yml
@@ -23,10 +23,7 @@ jobs:
       run: |
         cp regex.yaml REx/src/assets
         cd REx
-        npm install -g @angular/cli@latest
-        npm install --save-dev @angular-devkit/build-angular@15.2.7
-        npm install --save @angular/animations@15.0.0
-        npm run build
+        npm install
         cd ..
         cp REx/docs ./
 
