--- a/.github/workflows/check_regex_examples.yml
+++ b/.github/workflows/check_regex_examples.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         cp regex.yaml REx/src/assets
         cd REx
-        npm install
+        npm install --force
         cd ..
         cp REx/docs ./
 
