--- a/.github/workflows/check_regex_examples.yml
+++ b/.github/workflows/check_regex_examples.yml
@@ -24,8 +24,8 @@ jobs:
         cp regex.yaml REx/src/assets
         cd REx
         npm install --force
-        cd ..
-        cp REx/docs .
+        cp docs ../
+        
 
     - name: Install yq
       run: |
