--- a/.github/workflows/check_regex_examples.yml
+++ b/.github/workflows/check_regex_examples.yml
@@ -24,7 +24,8 @@ jobs:
         cp regex.yaml REx/src/assets
         cd REx
         npm install --legacy-peer-deps
-        cp -r /docs ../
+        npm run build
+        cp -r /docs/* ../docs
         
 
     - name: Install yq
