--- a/.github/workflows/check_regex_examples.yml
+++ b/.github/workflows/check_regex_examples.yml
@@ -25,7 +25,8 @@ jobs:
         cd REx
         npm install --legacy-peer-deps
         npm run build
-        cp -r /docs/* ../docs
+        cd ..
+        cp -r REx/docs/* /docs
         
 
     - name: Install yq
