--- a/.github/workflows/check_regex_examples.yml
+++ b/.github/workflows/check_regex_examples.yml
@@ -50,3 +50,18 @@ jobs:
         cd tests/go
         go install
         go run exampleMatcher.go
+
+    - name: Build for Linux
+      run: GOOS=linux GOARCH=amd64 go build -o regexFinder_linux clients/go/regexFinder.go
+
+    - name: Build for macOS
+      run: GOOS=darwin GOARCH=amd64 go build -o regexFinder_macos clients/go/regexFinder.go
+
+    - name: Build for Windows
+      run: GOOS=windows GOARCH=amd64 go build -o regexFinder_windows.exe clients/go/regexFinder.go
+
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: regex-finder-artifacts
+        path: regexFinder_linux, regexFinder_macos, regexFinder_windows.exe
