--- a/.github/workflows/check_regex_examples.yml
+++ b/.github/workflows/check_regex_examples.yml
@@ -15,7 +15,8 @@ jobs:
   run_bash_script:
     runs-on: ubuntu-latest
 
-    steps:    - name: Checkout repository
+    steps:
+    - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Update Web
